Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29790

Search scope is out of sync

XMLWordPrintable

    • ecfd22402 (master)

      How to reproduce:

      1. Open 2 projects (A and B), but only have documents from project A open
      2. Press CTRL + SHIFT + F
      3. Search is showing that we're in the scope of project A (it picks that scope due to the open files, this is the case even with project B active)
      4. While having the search open, select (not open) a file from project B in the project tree
      5. The scope of the search changes to project B
      6. Press on "Search"

      Results from porject A will be shown which isn't in sync with the scope ComboBox.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            henning Henning Gründl
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes