ProjectExplorer: Re-do the CurrentProjectFind class

- Have a placeholder item "single project" in the main
  combo box instead of the current project.
- Let the user choose the concrete project in the config
  widget.
- Do not magically switch the context to the current project,
  but let the user make a conscious decision about that.

Fixes: QTCREATORBUG-29790
Change-Id: I1ac4a2c553117d9d3a9900b6ba8ad22738171e2f
Reviewed-by: Eike Ziller <eike.ziller@qt.io>