src/plugins/projectexplorer/allprojectsfind.h
@@ -33,10 +33,10 @@ public:
     // deprecated
     QByteArray settingsKey() const override;
 
-protected:
     static Utils::FileContainer filesForProjects(const QStringList &nameFilters,
                                                  const QStringList &exclusionFilters,
                                                  const QList<Project *> &projects);
+protected:
     QString label() const override;
     QString toolTip() const override;
 
